notification frequency fixes